Fixed the disabling of the scrollbar buttons, at least for left/right

--- a/records/app/src/main/scss/stableview.scss
+++ b/records/app/src/main/scss/stableview.scss
@@ -85,13 +85,13 @@
     -fx-border-width: 0 1 0 1;
 }
 .stable-view-button-left {
-    -fx-border-width: 1 0 1 1;
+    -fx-border-width: 1 0 1 0;
 }
 .stable-view-button-right {
     -fx-border-width: 1 1 1 0;
 }
 .stable-view-button-top {
-    -fx-border-width: 1 1 0 1;
+    -fx-border-width: 0 1 0 1;
 }
 .stable-view-button-bottom {
     -fx-border-width: 0 1 1 1;
